Still visible on mobile but can scroll, fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,10 @@
 
 ::-webkit-scrollbar-track {
   background-color: #0A192F;
+
+  @include mobile {
+    display: none;
+  }
 }
 
 ::-webkit-scrollbar-thumb {
@@ -23,10 +27,14 @@
   border-radius: 20px;
   border: 6px solid transparent;
   background-clip: content-box;
+
+  @include mobile {
+    display: none;
+  }
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #a8bbbf;
+  background-color: #57DFC3;
 }
 
 
